# coin-flipper

./: .gitignore  package-lock.json  package.json
.github/workflows/: rust.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Greet.vue
